fixed issue where tree view size wouldn't adjust when expanding/collapsing a directory

--- a/styles/autohide-tree-view.less
+++ b/styles/autohide-tree-view.less
@@ -4,9 +4,8 @@
 // for a full listing of what's available.
 
 .tree-view-resizer.autohide {
-  width: auto!important;
-  min-width: initial!important;
-  transition: max-width .3s;
+  min-width: 1px!important;
+  transition: width .3s;
   position: absolute!important;
 
   &[data-show-on-right-side="true"] {
